css/bigsdb.css
/* ... */
div.private_record span.fa-lock {
	color: #b96a6a;
	text-shadow: 1px 1px 1px #aaa
}

div.private_record p {
	margin-bottom: 0
}

p.note {
	display: inline-block;
	min-height: 3em;
	background: transparent;
	color: #1d3557;
	padding: 10px 10px 1px 20px;
	border-left: 4px solid #ff9944;
}

span.note {
	font-weight: 600;
	color: #880000
}

p.key {
	display: inline-block;
	padding: 5px 20px;
	background: #eee
}

span.key {
	font-family: ibm_plex_mono, monospace;
	margin-right: 20px
}

span.key.banned {
	color: #aaa
}

p.key.banned {
	color: #ccc
}

p.progress {
	font-size: 1.5em;
	color: #404080;
	line-height: 130%;
}

.button,
.smallbutton,
.fieldvaluebutton {
	background: #f0f0f0;
	color: #333;
	border: 1px solid #d6dde7;
	box-shadow: 0 1px 2px rgba(0,0,0,0.06);
	border-radius: 3px;
	white-space: nowrap
}

.button .fas,
.smallbutton .fas,
.fieldvaluebutton .fas {
	font-size: 0.9em;
	color: #6c758b;
}

.button:hover,
.smallbutton:hover,
.fieldvaluebutton:hover {
	background: #fff;
	color: black;
	text-decoration: none;
	border: 1px solid #666;
}

.button {
	padding: 0.2em 0.5em;
	margin: 5px;
	cursor: pointer
}

button.pagebar {
	font-size: 1.2em;
	border: 0;
	padding: 0;
	background: transparent;
	cursor: pointer;
	color: #2F9FDB
}

button.pagebar:hover {
	color: #8D6196
}

button.page_number {
	margin: 0 0.4em;
	font-family: 'pt_sansbold'
}

button.pagebar:disabled {
	cursor: default;
	color: #888
}

button.pagebar_selected:disabled {
	color: #193658
}

input.plugin_button {
	border-radius: 3px;
	font-family: 'pt_sansbold';
	font-weight: 500;
	cursor: pointer;
	padding: 1px 10px;
	background: #eef3f8;
	border: 1px solid #d4dde8;
	color: #48617f;
	cursor: pointer;
}

input.plugin_button:hover {
	background: #e2ebf5;
	border-color: #bfd0e2;
	color: #304a68;
}

div.plugin_category {
	clear: both;
	margin-bottom: 16px;
	display: flow-root;
}

div.plugin_category_menu {
	float: left;
	text-align: right;
	width: 8em;
	white-space: nowrap;
	margin-right: 0.5em
}

div.plugin_category_menu span.plugin_heading {
	font: 600 18px ibm_plex_sans, sans-serif;
	color: #585874;

}

span.plugin_icon {
	color: #6c758b;
	opacity: 0.8;
	margin-right: 0.2em
}

div.plugin_category_buttons {
	margin-left: 8.5em;
	margin-bottom: 0.2em
}

div.projects {
	display: flex;
	flex-flow: wrap;
	gap: 15px
}

div.bottom_fade {
	mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
}

div.project {
	padding: 10px;
	max-width: 400px;
	background: #fffeff;
	border: 1px solid #aaa;
	border-radius: 10px
}

div.references li {
	padding-bottom: 1em;
}

p#show_projects,p#show_refs {
	color: #6c758b;
	margin: 12px 0 24px 24px;
	cursor: pointer;
}

p#hide_projects,p#hide_refs {
	color: #6c758b;
	margin: 12px 0 24px 24px;
	cursor: pointer;
}

a.submit,
input.submit {
	cursor: pointer;
	padding: 10px 20px;
	border: 0;
	background: #4f7db8;
	border-radius: 4px;
	font-family: 'pt_sansbold';
	font-size: 20px;
	line-height: 130%;
	letter-spacing: 0.06em;
	text-transform: capitalize;
	color: #FFFFFF;
}

a.small_submit,
input.small_submit,
button.small_submit {
	border-radius: 3px;
	font-family: 'pt_sansbold';
	border: 0;
	cursor: pointer;
	padding: 1px 10px;
	background: #4f7db8;
	color: #FFFFFF;
	cursor: pointer;
	white-space: nowrap;
}

a.submit:hover,
a.small_submit:hover,
input.submit:hover,
input.small_submit:hover,
button.small_submit:hover {
	background: #8D5196;
	text-decoration: none
}

input.submit_disabled {
	background: #aaa;
}

input.submit_disabled:hover {
	background: #aaa;
}

a.reset,
input.reset {
	padding: 8px 20px;
	border: 2px solid #4f7db8;
	background: #FFFFFF;
	border-radius: 4px;
	font-family: 'pt_sansbold';
	font-size: 20px;
	line-height: 130%;
	letter-spacing: 0.06em;
	text-transform: capitalize;
	color: #4f7db8;
}

a.small_reset,
input.small_reset {
	border-radius: 3px;
	background: #fff;
	font-family: 'pt_sansbold';
	cursor: pointer;
	padding: 0 10px;
	color: #4f7db8;
	border: 1px solid #4f7db8;
	font-family: 'pt_sansbold';
}

a.reset:hover,
input.reset:hover {
	text-decoration: none;
	color: #8D5196;
	border: 2px solid #8D5196
}

a.small_reset:hover,
input.small_reset:hover {
	text-decoration: none;
	color: #8D5196;
	border: 1px solid #8D5196
}

input.disabled {
	background: #B0B0B0;
}

input.disabled:hover {
	background: #B0B0B0;
}

a.add_button {
	background: #fff;
	border: 1px solid #888;
	border-radius: 3px;
	color: #888;
	padding: 0 0.5em;
	font-size: 1em;
	max-height: 1.4em;
}

a.add_button:hover {
	text-decoration: none;
	color: #fff;
	background: #888;
}

button.smallbutton {
	padding: 0.2em 0.5em
}

input.updatebutton {
	border: 1px solid #aad;
	color: #333;
	background: #eee
}

input.updatebutton:hover {
	border: 1px solid #669
}

div.fasta_upload,
div.file_upload {
	position: relative;
	margin-top: 0.5em;
}

div.fakefile {
	position: absolute;
	top: 0px;
	left: 0px;
	z-index: 1;

}

div.fakefile input {
	width: 15em;
	height: 3em;
	padding: 0 0.5em;
	border: 3px dashed #e8e8e8;
	border-radius: 10px;
}

input#fasta_upload,
input#file_upload {
	height: 3em;
	position: relative;
	text-align: right;
	-moz-opacity: 0;
	filter: alpha(opacity=0);
	opacity: 0;
	z-index: 2;
	height: 3em;
	cursor: pointer;
	max-width: 17em;
}

.launchbutton {
	background: #3498db;
	background-image: linear-gradient(to bottom, #3498db, #2980b9);
	border-radius: 12px;
	font-family: Arial;
	color: #fff;
	font-size: 1.2em;
	padding: 0.5em 1em;
	text-decoration: none;
	white-space: nowrap;
}

.launchbutton:hover {
	background: #3cb0fd;
	background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
	text-decoration: none;
	color: #fff;
}

input.pagebar:hover {
	border: 1px solid #f00;
	background: #fff
}

.td1 {
	background: #f0f0ff;
	vertical-align: top
}

div.large_resultstable .td1,
div#large_resultstable .td1 {
	background: #f6f6ff;
}

.td2 {
	background: transparent;
	vertical-align: top
}
/* ... */

